Update vulnerable dependencies
Not that this will affect anyone, but it's nice anyway.

--- a/2016/day-09/Cargo.toml
+++ b/2016/day-09/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 authors = ["Bert Peters <bert.ljpeters@gmail.com>"]
 
 [dependencies]
-regex = "^0.1"
-lazy_static = "^0.2"
+regex = "1"
+lazy_static = "1"
